# DirectTransferer

./: CMakeLists.txt  README.md  external_functions.cpp  external_functions.h  login.h  main.cpp  res.qrc  sub_thread.cpp  sub_thread.h  tdialoglogin.cpp  tdialoglogin.h  tdialoglogin.ui  widget.cpp  widget.h  widget.ui
external_libs/: pocketsphinx.lib
resources/: icon.aps  icon.rc
